discussion/kv_engine/172523/172523_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47139 magma-kvstore: Adapt to SetMaxOpenFiles API change

The global magma library method SetMaxOpenFiles() should be called only
after initializing atleast one magma db instance. The data structures
used by the method (memory guard switch) is only initialized during the
db instance construction.

The API is now moved to a db instance level method to
avoid the ambiguity of the API usage.

Change-Id: I75b60c85fc0590fbb722a7c604c6e445e66954da

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Sarath Lakshman
Date: 2022-03-18 17:40:26.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-03-18 17:40:38.000000000
Message: 
Patch Set 1: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/291691/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Sarath Lakshman
Date: 2022-03-18 17:45:58.000000000
Message: 
Patch Set 1: Code-Review-2
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-18 17:47:28.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/77/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:666:16:
error: no member named "SetMaxOpenFiles" in "MagmaMemoryTrackingProxy"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/77/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/78/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:666:16: error: no member named "SetMaxOpenFiles" in "MagmaMemoryTrackingProxy" [clang-diagnostic-error]
        magma->SetMaxOpenFiles(configuration.getMaxFileDescriptors());
               ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/78/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:666:16:
error: no member named "SetMaxOpenFiles" in "MagmaMemoryTrackingProxy" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/78/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/104/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(666): error C2039: "SetMaxOpenFiles": is not a member of "MagmaMemoryTrackingProxy" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/104/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/78/ : FAILURE

Compile error at [2022-03-18T17:42:28.782Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:666:16:
error: no member named "SetMaxOpenFiles" in "MagmaMemoryTrackingProxy"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/78/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/78/ : FAILURE

Compile error at [2022-03-18T17:44:54.509Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:666:16:
error: no member named "SetMaxOpenFiles" in "MagmaMemoryTrackingProxy"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/78/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/81/ : FAILURE

Compile error at [2022-03-18T17:45:03.184Z] /Users/couchbase/workspace/workspace/kv_engine.macos_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:666:16:
error: no member named "SetMaxOpenFiles" in "MagmaMemoryTrackingProxy"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/81/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/80/ : FAILURE

Compile error at [2022-03-18T17:43:48.291Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:666:16:
error: ?class MagmaMemoryTrackingProxy? has no member named ?SetMaxOpenFiles?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/80/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/80/ : FAILURE

Compile error at [2022-03-18T17:43:52.983Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:666:16:
error: no member named "SetMaxOpenFiles" in "MagmaMemoryTrackingProxy"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/80/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/72/ : FAILURE

Compile error at [2022-03-18T17:46:24.866Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:666:16:
error: ?class MagmaMemoryTrackingProxy? has no member named ?SetMaxOpenFiles?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/72/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15005/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/81/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
